--- a/.github/workflows/pdf2html.yml
+++ b/.github/workflows/pdf2html.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: '0 0 * * 1' # Runs every Monday at midnight
 
 jobs:
   convert:
@@ -36,6 +34,17 @@ jobs:
           docker run --rm -v "$(pwd)/manuals:/pdf" -w /pdf pdf2htmlex/pdf2htmlex:0.18.8.rc2-master-20200820-alpine-3.12.0-x86_64 --zoom 1.3 --external-hint-tool=ttfautohint --embed-css 0 "$(basename "$pdf")" "${pdf_basename}.html"
         done
 
+    - name: Check file permissions
+      run: ls -l manuals
+
+    - name: Change file ownership and permissions
+      run: |
+        sudo chown -R $USER:$USER manuals
+        sudo chmod -R 755 manuals
+
+    - name: Add home cover links
+      run: python3 add_menus.py
+    
     - name: Generate index.html
       run: |
         python3 generate_index.py
@@ -58,7 +67,7 @@ jobs:
         if [ -d "manuals" ]; then
           mv manuals/*.html . || true
           mv manuals/*.css . || true
-          git checkout main -- fancy.min.css ||true
+          git checkout main -- fancy.min.css || true
           rm -rf manuals .github *.py
         else
           echo "No HTML files to move"
@@ -68,7 +77,7 @@ jobs:
       run: |
         git add .
         if [[ `git status --porcelain` ]]; then
-          git commit -m 'Add New Weekly Bulletins'
+          git commit -m 'Added new manual'
         fi
   
     - name: Push to gh-pages
